# graph_project

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  INSTALL.md  ceo-plan.md  design.md  test-plan.md  workflow.md
docs/architecture/: d-integration-spec.md  data-model.md  kill-criteria.md
docs/planning/: README.md  ceo-review-tasks.jsonl  eng-review-tasks.jsonl  phase1-implementation-plan.md
docs/presentation/: PAIQ-11.3-Phase1.pptx  build_deck.py  ~$PAIQ-11.3-Phase1.pptx
eval/: README.md  __init__.py  datasets.py
eval/labels/: .gitkeep
eval/labels/sample/: dataset.jsonl
eval/runners/: __init__.py  edge_precision.py  judge_pass_rate.py  regression.py
src/: __init__.py  cli.py  config.py
src/cascade_integration/: __init__.py  recal.py
src/d_extraction/: __init__.py  extractor.py  prompts.py  provider.py  schema.py
src/feature_flags/: __init__.py  flags.py
src/guardrails/: __init__.py  detector.py  retry.py  state.py
src/journal/: __init__.py  downstream.py  replay.py  writer.py
src/shadow/: __init__.py  harness.py
src/telemetry/: __init__.py  counters.py  observability.py
tests/: conftest.py  test_canonicalization.py  test_cascade_recal.py  test_cli.py  test_coverage_completeness.py  test_d_extraction.py  test_downstream_visibility.py  test_eval_runners.py  test_extraction_regression.py  test_feature_flag.py  test_guardrails_detection.py  test_guardrails_retry.py  test_journal.py  test_observability.py  test_provider_extractor.py  test_shadow_harness.py
