[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paiq-graph"
version = "0.1.0"
description = "PAIQ Idea 11.3 Phase 1: relationship-aware extraction (Approach D) + extraction-time guardrails"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "PAIQ team" },
]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
# Real LLM providers (only needed when PAIQ_PROVIDER=openai|anthropic; the
# default offline MockProvider needs neither).
openai = ["openai>=1.12"]
anthropic = ["anthropic>=0.18"]
providers = ["openai>=1.12", "anthropic>=0.18"]
# scipy powers Clopper-Pearson + non-95% Wilson; only the eval runners use it.
eval = ["scipy>=1.11"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "scipy>=1.11",
    "openai>=1.12",
    "anthropic>=0.18",
]

[project.scripts]
paiq-d = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "regression: iso-precision regression tests across existing field types (Week-4 Kill Criteria gate)",
    "eval: full LLM eval runs (skipped by default in CI; explicit opt-in via -m eval)",
    "slow: takes >30 seconds",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["py.typed"]
